small spacing fix for toggle buttons

--- a/extensions/forms.less
+++ b/extensions/forms.less
@@ -479,7 +479,6 @@ fieldset {
 		#visuallyHidden;
 		+ span {
 			.button;
-			margin: 0;
 		}
 		&:checked + span {
 			background: @accentcolor;
